# flexbe_synthesis

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/ci/: flexbe_behavior_engine.repos
.github/workflows/: ci.yml
flexbe_synthesis/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
flexbe_synthesis_core/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
flexbe_synthesis_core/flexbe_synthesis_core/: base_preprocess.py  base_process.py  error_code_map.py  pipeline_type_validation.py  plugin.py  predefined_strings.py  request_synthesis.py  synthesis_manager.py  validation_error.py
flexbe_synthesis_core/test/: test_flake8.py  test_pipeline_type_validation.py  test_predefined_strings.py  test_request_synthesis.py  test_synthesis_manager_pipeline.py  test_synthesis_manager_startup.py
flexbe_synthesis_examples/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
flexbe_synthesis_examples/docs/coffee/: coffee.md
flexbe_synthesis_examples/docs/hello_world/: hello_world.md
flexbe_synthesis_examples/docs/vending/: vending.md
flexbe_synthesis_examples/example/coffee_maker/capabilities/: coffee_capabilities.yaml  coffee_capabilities_extended.yaml
flexbe_synthesis_examples/example/coffee_maker/pipelines/: preprocesses_data.yaml  processes_data.yaml
flexbe_synthesis_examples/example/coffee_maker/specs/: coffee_demo_capabilities_spec.yaml  coffee_full_spec.structuredslugs  coffee_full_spec.yaml
flexbe_synthesis_examples/example/common/pipelines/: capability_processes_def.yaml  capability_processes_def_parsed.yaml  empty_processes_data.yaml  empty_processes_def.yaml  full_spec_processes_def.yaml  preprocesses_data.yaml  preprocesses_def.yaml  slugs_preprocesses_def.yaml
flexbe_synthesis_examples/example/hello_world/capabilities/: hello_world_capabilities.yaml
flexbe_synthesis_examples/example/hello_world/pipelines/: processes_data.yaml  processes_def.yaml
flexbe_synthesis_examples/example/hello_world/sm/: hello_world_sm.yaml
flexbe_synthesis_examples/example/vending_demo/capabilities/: vending_capabilities.yaml  vending_capabilities_extended.yaml
flexbe_synthesis_examples/example/vending_demo/pipelines/: preprocesses_data.yaml  processes_data.yaml
flexbe_synthesis_examples/example/vending_demo/specs/: vending_demo.yaml  vending_demo_capabilities_spec.yaml  vending_demo_full_spec.yaml
flexbe_synthesis_examples/flexbe_synthesis_examples/: __init__.py  demo_cancel_synthesis_request.py  request_coffee.py  request_hello_world.py  request_vending.py  slugs_launch.py  synthesis_demo_sm.py
flexbe_synthesis_examples/launch/: coffee_capabilities_example.launch.py  coffee_capabilities_extended_example.launch.py  coffee_capabilities_extended_parsed_example.launch.py  coffee_capabilities_parsed_example.launch.py  coffee_full_spec_example.launch.py  coffee_preprocess_example.launch.py  hello_world_example.launch.py  vending_capabilities_example.launch.py  vending_capabilities_extended_example.launch.py  vending_capabilities_extended_parsed_example.launch.py  vending_capabilities_parsed_example.launch.py  vending_full_spec_example.launch.py  vending_preprocess_example.launch.py
flexbe_synthesis_examples/manifest/: synthesis_demo.xml
flexbe_synthesis_examples/test/: test_examples.py  test_flake8.py  test_synthesis_example_pairs.py
flexbe_synthesis_generic/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
flexbe_synthesis_generic/flexbe_synthesis_generic/preprocesses/: capability_loader.py  generate_discrete_abstraction.py  generate_transition_relations.py  state_mappings.py  workspace_crawler.py  workspace_parser.py
flexbe_synthesis_generic/flexbe_synthesis_generic/processes/: sm_layout.py  sm_loader.py  system_capabilities_loader.py
flexbe_synthesis_generic/mappings/: global_mappings.yaml  infinite_mappings.yaml
flexbe_synthesis_generic/test/: test_capability_loader.py  test_generate_discrete_abstraction.py  test_generate_transition_relations.py  test_sm_layout.py  test_sm_loader.py  test_state_mappings.py  test_system_capabilities_loader.py  test_workspace_crawler.py  test_workspace_parser.py
flexbe_synthesis_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
flexbe_synthesis_msgs/action/: FlexBESynthesis.action
flexbe_synthesis_msgs/msg/: FlexBESynthesisRequest.msg  SynthesisErrorCode.msg
flexbe_synthesis_slugs/: CHANGELOG.rst  README.md  THIRD_PARTY_LICENSES.md  package.xml  setup.cfg  setup.py
flexbe_synthesis_slugs/docs/: state_generation.md
flexbe_synthesis_slugs/flexbe_synthesis_slugs/helpers/: binary_variables.py  count_specs.py  gr1_formula.py  gr1_specification.py  inspect_specs.py  ltl.py  mealy2dot.py  slugs_automaton.py  slugs_automaton_checker.py  slugs_binary.py  slugs_stats_helper.py  slugs_synthesizer_helper.py  slugs_timing_stats.py  sm_generation_helpers.py
flexbe_synthesis_slugs/flexbe_synthesis_slugs/preprocesses/: validate_slugs_install.py
flexbe_synthesis_slugs/flexbe_synthesis_slugs/processes/: slugs_activation_specification_parsed.py  slugs_adversarial_liveness.py  slugs_automaton_loader.py  slugs_capability_specification.py  slugs_count_specs.py  slugs_fair_outcome_liveness.py  slugs_mealy_graph.py  slugs_pending_specification.py  slugs_request_specification.py  slugs_sm_generator.py  (+5 more)
flexbe_synthesis_slugs/scripts/: install_slugs.sh
flexbe_synthesis_slugs/test/: test_binary_variables.py  test_concurrent_state_generator.py  test_copyright.py  test_count_specs_helper.py  test_flake8.py  test_gen_concurrent_state.py  test_gr1_formula.py  test_inspect_specs_helper.py  test_slugs_automaton_checker.py  test_slugs_processes.py  test_sm_gen_config.py
(+7 files in other folders)
