<?xml version="1.0"?>
<package format="3">
  <name>flexbe_synthesis_examples</name>
  <version>0.0.1</version>
  <description>
      Minimal example capability files, launch files, and request clients for generic and
      Slugs-backed FlexBE Synthesis workflows.
  </description>
  <author>Joshua Luzier</author>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://github.com/CNURobotics/flexbe_synthesis</url>
  <url type="bugtracker">https://github.com/CNURobotics/flexbe_synthesis/issues</url>
  <url type="repository">https://github.com/CNURobotics/flexbe_synthesis</url>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>flexbe_states</exec_depend>
  <exec_depend>flexbe_synthesis_core</exec_depend>
  <exec_depend>flexbe_synthesis_generic</exec_depend>
  <exec_depend>flexbe_synthesis_msgs</exec_depend>
  <exec_depend>flexbe_synthesis_slugs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <flexbe_behaviors />
  </export>
</package>
