<?xml version="1.0"?>
<package format="3">
    <name>flexbe_synthesis_msgs</name>
    <version>0.0.1</version>
    <description>
        Message, service, and action interfaces used by FlexBE Synthesis.
    </description>
    <author>Joshua Luzier</author>
    <maintainer email="robotics@cnu.edu">David Conner</maintainer>
    <license>Apache-2.0</license>
    <url type="website">https://github.com/CNURobotics/flexbe_synthesis</url>
    <url type="bugtracker">https://github.com/CNURobotics/flexbe_synthesis/issues</url>
    <url type="repository">https://github.com/CNURobotics/flexbe_synthesis</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>action_msgs</depend>
    <depend>flexbe_msgs</depend>
    <depend>rosidl_default_runtime</depend>

    <test_depend>ament_cmake_pytest</test_depend>
    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_pep257</test_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
